hotelmenu  item listed and login to be added

--- a/templates/index.html
+++ b/templates/index.html
@@ -184,16 +184,9 @@
                                     <th scope="col">Price (Rs)</th>
                                 </tr>
                             </thead>    
-                            <div id="datatable">
-                            <tbody>             
-                                <!-- Lines to edit By kili-->               
-                                <tr>
-                                    {% for key, value in hotelMitem %}
-                                    <td>{{ item[key] }}</td>                                                                    
-                                    <td>{{ item[value] }}</td>                                    
-                                    {% endfor %}
-                                </tr>                                       
-                                <!-- / Lines to edit By kili-->                                                                                                        
+                            <div>
+                            <tbody id="datatable">             
+                                                                
                             </tbody>
                             </div>                           
                         </table>
